--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,6 @@
 RewriteEngine On
+RewriteBase /CMS-shop/
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
+RewriteRule ^(.*)$ php/index.php?url=$1 [QSA,L]
